--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "@vercel/analytics": "^1.5.0",
     "aos": "^2.3.4",
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.4.7",
